deployment/community-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-service
  labels:
    app: community-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: community-service
  template:
    metadata:
      labels:
        app: community-service
    spec:
      containers:
        - name: community-service
          image: quay.io/danielmunro/otto-community-service:latest
          resources:
            requests:
              ephemeral-storage: "500Mi"
            limits:
              ephemeral-storage: "500Mi"
          ports:
            - containerPort: 8081
              name: community_service
