deployment/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: quay.io/danielmunro/otto-user-service:latest
          resources:
            requests:
              ephemeral-storage: "500Mi"
            limits:
              ephemeral-storage: "500Mi"
          ports:
            - containerPort: 8080
              name: user_service
          volumeMounts:
            - name: user-config
              mountPath: "/tmp/user-config"
              readOnly: true
      volumes:
        - name: user-config
          secret:
            secretName: user-config
